Move _navbar.html.erb to views/shared

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <%= render 'layouts/navbar' %>
+    <%= render 'shared/navbar' %>
     <div class="container mt-3">
       <%= yield %>
     </div>
