--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <%= render 'shared/navbar' %>
+    <%= render 'shared/flash' %>
     <div class="container mt-3">
       <%= yield %>
     </div>
