--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
             <li><%= link_to "Profile", "#", class: "dropdown-item" %></li>
             <li><%= link_to "Settings", "#", class: "dropdown-item" %></li>
             <li><hr class="dropdown-divider"></li>
-            <li><%= link_to "Log out", "#", class: "dropdown-item" %></li>
+            <li><%= button_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
           </ul>
         </li>
       </ul>
