--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,7 @@
               Avatar
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li class="dropdown-item disabled">Logged in as <%= current_user.username %></li>
+              <li class="dropdown-item disabled text-dark">Logged in as <%= current_user.username %></li>
               <li><hr class="dropdown-divider"></li>
               <li><%= link_to "Profile", "#", class: "dropdown-item" %></li>
               <li><%= link_to "Settings", "#", class: "dropdown-item" %></li>
