--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,14 +7,14 @@
 
     <div class="field mb-3">
       <%= f.label :password, "New password", class: "form-label" %>
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-      <% end %>
       <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control" %>
+      <% if @minimum_password_length %>
+        <em class="form-text"><%= @minimum_password_length %> characters minimum</em>
+      <% end %>
     </div>
 
     <div class="field mb-4">
-      <%= f.label :password_confirmation, "Confirm new password", class: "form-label" %><br />
+      <%= f.label :password_confirmation, "Confirm new password", class: "form-label" %>
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
     </div>
 
