--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,12 +5,12 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field mb-3">
-    <%= f.label :username, class: "form-label" %><br />
+    <%= f.label :username, class: "form-label" %>
     <%= f.text_field :username, class: "form-control" %>
   </div>
 
   <div class="field mb-3">
-    <%= f.label :email, class: "form-label" %><br />
+    <%= f.label :email, class: "form-label" %>
     <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
   </div>
 
@@ -19,7 +19,7 @@
   <% end %>
 
   <div class="field mb-3">
-    <%= f.label :password, class: "form-label" %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password, class: "form-label" %> <i>(leave blank if you don't want to change it)</i>
     <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
     <% if @minimum_password_length %>
       <em class="form-text"><%= @minimum_password_length %> characters minimum</em>
@@ -27,12 +27,12 @@
   </div>
 
   <div class="field mb-3">
-    <%= f.label :password_confirmation, class: "form-label" %><br />
+    <%= f.label :password_confirmation, class: "form-label" %>
     <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
   </div>
 
   <div class="field mb-4">
-    <%= f.label :current_password, class: "form-label" %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password, class: "form-label" %> <i>(we need your current password to confirm your changes)</i>
     <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
   </div>
 
