--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,25 +5,25 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field mb-3">
-      <%= f.label :username, class: "form-label" %><br />
+      <%= f.label :username, class: "form-label" %>
       <%= f.text_field :username, autofocus: true, class: "form-control" %>
     </div>
 
     <div class="field mb-3">
-      <%= f.label :email, class: "form-label" %><br />
+      <%= f.label :email, class: "form-label" %>
       <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
     </div>
 
     <div class="field mb-3">
       <%= f.label :password, class: "form-label" %>
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
       <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+      <% if @minimum_password_length %>
+        <em class="form-text"><%= @minimum_password_length %> characters minimum</em>
+      <% end %>
     </div>
 
     <div class="field mb-4">
-      <%= f.label :password_confirmation, class: "form-label" %><br />
+      <%= f.label :password_confirmation, class: "form-label" %>
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
     </div>
 
