--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,15 +1,16 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation" data-turbo-cache="false">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
+  <div id="error_explanation" data-turbo-cache="false" class="alert alert-danger">
+    <!--<h2 class="fs-5">
+      <%= #I18n.t("errors.messages.not_saved",
+          #       count: resource.errors.count,
+          #       resource: resource.class.model_name.human.downcase)
        %>
-    </h2>
-    <ul>
-      <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+    </h2>-->
+<!--    <ul>-->
+      <% resource.errors.full_messages.each_with_index do |message, index| %>
+        <p class="m-0"><%= message %></p>
+        <%= raw "<hr>" unless index == resource.errors.full_messages.size - 1 %>
       <% end %>
-    </ul>
+<!--    </ul>-->
   </div>
 <% end %>
