--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,16 @@
 <%= link_to "Back", :back, class: "mb-3 d-inline-block" %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <div class="field mb-3 row">
+    <div class="col-auto d-flex flex-column justify-content-center">
+      <%= f.label :avatar, class: "form-label" %>
+      <%= f.file_field :avatar, class: "form-control" %>
+    </div>
+    <div class="col-md mt-3">
+      <%= image_tag user_avatar(current_user), size: 100, class: "rounded-circle" %>
+    </div>
+  </div>
+
   <div class="field mb-3">
     <%= f.label :username, class: "form-label" %>
     <%= f.text_field :username, class: "form-control" %>
