--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flash' %>
-    <div class="container mt-3">
+    <div class="container mt-3 mb-5">
       <%= yield %>
     </div>
   </body>
