--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -5,7 +5,7 @@
 <!--    Machine data-->
     <table>
       <% %w[type brand model release_date production_date condition].each do |data| %>
-        <% next unless @machine[data] %>
+        <% next if @machine[data].blank? %>
         <tr>
           <td><%= data.gsub("_", " ").capitalize %></td>
           <td><%= @machine[data] %></td>
