--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,19 +14,23 @@
   <div class="col-md">
 
     <div class="row d-flex flex-wrap g-3 g-md-2 overflow-hidden">
-      <% 5.times do %>
-        <div class="col-12 col-md-6 col-lg-6">
+      <% if @machines.blank? %>
+        <p class="text-center">This user has no machines added</p>
+      <% end %>
+
+      <% @machines.each do |machine| %>
+        <a href="<%= machine_path(@user.username, machine.name) %>" class="d-block col-12 col-md-6 col-lg-6 text-decoration-none text-dark">
           <div class="d-flex flex-wrap border border-secondary rounded-3 p-3 bg-light">
 
             <img src="https://placehold.co/800x600" class="col-md-3 img-fluid cover rounded-1 me-3 mb-3 mb-md-0">
 
             <div class="col">
-              <h3 class="fs-4">Lorem PC</h3>
-              <p class="m-0">Lorem ipsum dolor sit amet</p>
+              <h3 class="fs-4"><%= machine.name %></h3>
+              <p class="m-0"><%= truncate machine.description, length: 64 %></p>
             </div>
 
           </div>
-        </div>
+        </a>
       <% end %>
     </div>
 
