--- a/app/views/machines/new.html.erb
+++ b/app/views/machines/new.html.erb
@@ -2,42 +2,6 @@
   <div class="machine-form mx-auto">
     <h1>New machine</h1>
 
-    <%= form_with model: @machine, url: "/machines/create" do |f| %>
-      <div class="mt-3">
-        <%= f.label :name, class: "form-label" %>
-        <%= f.text_field :name, required: "required", class: "form-control" %>
-      </div>
-      <div class="mt-3">
-        <%= f.label :type, class: "form-label" %>
-        <%= f.text_field :type, class: "form-control" %>
-      </div>
-      <div class="mt-3">
-        <%= f.label :brand, class: "form-label" %>
-        <%= f.text_field :brand, class: "form-control" %>
-      </div>
-      <div class="mt-3">
-        <%= f.label :model, class: "form-label" %>
-        <%= f.text_field :model, class: "form-control" %>
-      </div>
-      <div class="mt-3">
-        <%= f.label :release_date, class: "form-label" %>
-        <%= f.date_field :release_date, class: "form-control" %>
-      </div>
-      <div class="mt-3">
-        <%= f.label :production_date, class: "form-label" %>
-        <%= f.date_field :production_date, class: "form-control" %>
-      </div>
-      <div class="mt-3">
-        <%= f.label :condition, class: "form-label" %>
-        <%= f.number_field :condition, class: "form-control" %>
-      </div>
-      <div class="mt-3">
-        <%= f.label :description, class: "form-label" %>
-        <%= f.text_area :description, rows: "10", class: "form-control" %>
-      </div>
-      <div class="mt-3">
-        <%= f.submit class: "btn btn-primary" %>
-      </div>
-    <% end %>
+    <%= render 'machines/form' %>
   </div>
 </div>
