Add machine edit page

--- a/app/views/machines/edit.html.erb
+++ b/app/views/machines/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Machines#edit</h1>
-<p>Find me in app/views/machines/edit.html.erb</p>
+<div class="row">
+  <div class="machine-form mx-auto">
+    <h1>Edit machine</h1>
+
+    <%= render 'machines/form' %>
+  </div>
+</div>
