Make the machine show view look good - Add lines between sections - Display owner's username and avatar - Add padding to the table

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -30,3 +30,10 @@ div.devise-form {
 .machine-form {
   max-width: 540px;
 }
+
+.machine_show_table {
+  td {
+    padding-inline: 5px;
+    padding-block: 3px;
+  }
+}
