Parse Markdown in machine description

--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -29,7 +29,7 @@
   <hr>
   <div>
     <% if @machine.description %>
-      <%= @machine.description %>
+      <%= markdown @machine.description %>
     <% else %>
       <p><i>No description provided</i></p>
     <% end %>
