--- a/app/views/machines/edit.html.erb
+++ b/app/views/machines/edit.html.erb
@@ -3,5 +3,14 @@
     <h1>Edit machine</h1>
 
     <%= render 'machines/form' %>
+
+    <h2 class="mt-5 mb-3">Danger zone</h2>
+    <%= button_to "Delete this machine",
+                  destroy_machine_path(@machine),
+                  class: "btn btn-danger",
+                  method: :delete,
+                  data: {
+                    turbo_confirm: "Are you sure you want to delete machine #{@machine.name}?"
+                  } %>
   </div>
 </div>
