--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,9 @@
 
   <div class="col-md-auto d-flex flex-md-column mb-4">
     <%= image_tag user_avatar(@user, 200), size: 200, alt: @user.username, class: "rounded-circle me-4 me-md-0" %>
-    <div>
-      <h2 class="mt-4"><%= @user.username %></h2>
-<!--      <p>Placeholder for user bio</p>-->
+    <div class="user_show_text">
+      <h2 class="mt-4 text-wrap"><%= @user.username %></h2>
+      <p class="mt-3 text-wrap"><%= @user.bio %></p>
       <% if user_signed_in? && current_user.email == @user.email %>
         <%= link_to "Edit", edit_user_registration_path, class: "btn btn-outline-secondary w-100 text-center mt-3" %>
       <% end %>
