--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -17,11 +17,26 @@
 <!--    Machine data-->
     <hr>
     <table class="machine_show_table">
-      <% %w[type brand model release_date production_date condition].each do |data| %>
+      <% %w[type brand model release_date production_date].each do |data| %>
         <% next if @machine[data].blank? %>
         <tr>
           <td class="pe-3"><%= data.gsub("_", " ").capitalize %></td>
           <td><%= @machine[data] %></td>
+        </tr>
+      <% end %>
+
+      <% unless @machine.condition.blank? %>
+        <%= stylesheet_link_tag "star-rating" %>
+        <tr>
+          <td class="pe-3">Condition</td>
+          <td>
+            <% @machine.condition.times do %>
+              <span class="star full-star"></span>
+            <% end %>
+            <% (5 - @machine.condition).times do %>
+              <span class="star empty-star"></span>
+            <% end %>
+          </td>
         </tr>
       <% end %>
     </table>
