Add titles to pages

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Edit profile" %>
+
 <%= render "devise/shared/error_messages", resource: resource %>
 
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
