--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Change your password" %>
+
 <%= render "devise/shared/error_messages", resource: resource %>
 
 <div class="devise-form">
