--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Sign up" %>
+
 <%= render "devise/shared/error_messages", resource: resource %>
 
 <div class="devise-form">
