--- a/app/views/machines/edit.html.erb
+++ b/app/views/machines/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Edit #{@machine.name}" %>
+
 <div class="row">
   <div class="machine-form mx-auto">
     <h1>Edit machine</h1>
