Implement machine images This functionality has been sitting almost finished on my PC for a few months, and only now I decided to try again resolving a weird CSS bug ^^'

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,6 +1,8 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
 
+@import "enlarge-img";
+
 div.devise-form {
   margin-top: 150px;
   margin-inline: auto;
@@ -42,4 +44,8 @@ div.devise-form {
     padding-inline: 5px;
     padding-block: 3px;
   }
+}
+
+.machine-description img {
+  max-width: 100%;
 }
