--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -23,6 +23,7 @@
     <%= f.label :production_date, class: "form-label" %>
     <%= f.date_field :production_date, class: "form-control" %>
   </div>
+
   <div class="mt-3">
     <p class="form-label pe-none"><%= :condition.capitalize %></p>
     <%= stylesheet_link_tag "star-rating" %>
@@ -44,6 +45,19 @@
       <%= f.label " ", for: "machine_condition_1", class: "star star-1" %>
     </div>
   </div>
+
+  <div class="mt-3 row">
+    <div class="col">
+      <%= f.label :image, class: "form-label" %>
+      <%= f.file_field :image, class: "form-control" %>
+    </div>
+    <% if @machine.image.attached? %>
+      <div class="col-auto">
+        <%= image_tag machine_image(@machine, 200), height: "75px", class: "rounded-2" %>
+      </div>
+    <% end %>
+  </div>
+
   <div class="mt-3">
     <%= f.label :description, class: "form-label" %>
     <%= f.text_area :description, rows: "10", class: "form-control" %>
