--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,27 +14,8 @@
   </div>
 
   <div class="col-md">
-
-    <div class="row d-flex flex-wrap g-3 g-md-2 overflow-hidden">
-      <% if @machines.blank? %>
-        <p class="text-center">This user has no machines added</p>
-      <% end %>
-
-      <% @machines.each do |machine| %>
-        <a href="<%= machine_path(@user.username, machine.name) %>" class="d-block col-12 col-md-6 col-lg-6 text-decoration-none text-dark">
-          <div class="d-flex flex-wrap border border-secondary rounded-3 p-3 bg-light">
-
-            <%= image_tag machine_image(machine, 800, 600), class: "col-md-3 img-fluid cover rounded-1 me-3 mb-3 mb-md-0" %>
-
-            <div class="col">
-              <h3 class="fs-4"><%= machine.name %></h3>
-              <p class="m-0"><%= truncate machine.description, length: 64 %></p>
-            </div>
-
-          </div>
-        </a>
-      <% end %>
-    </div>
-
+    <%= render layout: "shared/machine_list", locals: {machines: @machines} do %>
+      <p class="text-center">This user has no machines added</p>
+    <% end %>
   </div>
 </div>
