--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
           <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Explore", "#", class: "nav-link" %>
+          <%= link_to "Explore", "/explore", class: "nav-link" %>
         </li>
       </ul>
 
