--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,7 +29,7 @@
               <li class="dropdown-item disabled text-dark">Logged in as <%= current_user.username %></li>
               <li><hr class="dropdown-divider"></li>
               <li><%= link_to "Profile", user_path(current_user.username), class: "dropdown-item" %></li>
-              <li><%= link_to "Settings", "#", class: "dropdown-item" %></li>
+              <li><%= link_to "Settings", edit_user_registration_path, class: "dropdown-item" %></li>
               <li><hr class="dropdown-divider"></li>
               <li><%= button_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
             </ul>
